--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+    
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
@@ -455,7 +452,7 @@ body {
     <div id="result"></div>
   </div>
 
-  <div class="disqus-container fixed-bottom bg-secondary bg-opacity-75 p-4 rounded mx-auto" style="width: 70%; height: 450px; overflow: auto; opacity: 0; z-index: 1001; transition: opacity 0.5s ease-in-out;">
+  <div class="disqus-container">
     <div id="disqus_thread"></div>
   </div>  
   <script>
