--- a/page2.html
+++ b/page2.html
@@ -3,66 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reasons Behind Endangerment</title>
+    <title>Endangerment of the Peregrine Falcon</title>
     <style>
+        /* Body and general styling */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Georgia', serif;
             margin: 0;
             padding: 0;
-            background-color: rgb(242,192,41);
+            background-color: rgb(242, 192, 41);
+            color: #f5f5f5;
         }
 
         h1 {
             text-align: center;
-            margin-top: 20px;
+            margin: 40px 0;
             color: #333;
-            animation: fadeIn 1s ease-in;
+            font-size: 2.8em;
+            font-weight: bold;
         }
 
         .content {
-            max-width: 800px;
+            max-width: 900px; /* Wider content container */
             margin: 20px auto;
-            padding: 20px;
-            background-color: rgb(115,97,81);
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(66, 161, 229, 0.1);
-            opacity: 0;
-            animation: slideIn 1s forwards;
-            animation-delay: 0.5s;
+            padding: 40px;
+            background-color: rgb(95, 83, 70);
+            border-radius: 12px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            line-height: 1.6;
+            font-size: 1.1em;
         }
 
-        .animation-bar {
-            width: 100%;
-            height: 20px;
-            background-color: #007BFF;
-            animation: loading 3s infinite;
-            border-radius: 10px;
-            margin: 20px 0;
+        p {
+            margin-bottom: 1.5em;
         }
 
-        @keyframes loading {
-            0% { width: 0%; }
-            50% { width: 100%; }
-            100% { width: 0%; }
+        ul {
+            padding-left: 20px;
+            list-style-type: disc;
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
+        ul li {
+            margin-bottom: 1em;
         }
 
-        @keyframes slideIn {
-            from { transform: translateY(-20px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
+        .fact {
+            font-style: italic;
+            color: rgb(215, 215, 215);
         }
 
-        .button-container {
+        .top-buttons {
             text-align: center;
             margin-top: 20px;
         }
 
+        .top-buttons a {
+            padding: 12px 24px;
+            font-size: 16px;
+            color: white;
+            background-color: #007BFF;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background-color 0.3s;
+            margin: 0 10px;
+            display: inline-block;
+        }
+
+        .top-buttons a:hover {
+            background-color: #0056b3;
+        }
+
+        .images-container {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            gap: 20px;
+            margin: 30px 0;
+        }
+
+        .images-container img {
+            width: 30%;
+            border-radius: 8px;
+            transition: transform 0.3s;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .images-container img:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+        }
+
+        .button-container {
+            text-align: center;
+            margin-top: 40px;
+        }
+
         button {
-            padding: 10px 20px;
+            padding: 12px 24px;
             font-size: 16px;
             color: white;
             background-color: #007BFF;
@@ -70,64 +107,61 @@
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s;
-            margin: 0 10px; /* Space between buttons */
-            animation: bounce 1s infinite alternate; /* Bounce animation */
+            margin: 0 10px;
+            font-weight: bold;
         }
 
         button:hover {
-            background-color: #0056b3; /* Darker shade on hover */
+            background-color: #0056b3;
         }
-
-        @keyframes bounce {
-            from { transform: translateY(0); }
-            to { transform: translateY(-5px); }
-        }
-
-        img {
-            max-width: 100%; /* Responsive images */
-            border-radius: 8px;
-            margin: 20px 0;
-            opacity: 0;
-            animation: fadeIn 2s forwards;
-            animation-delay: 2s; /* Delay for image fade-in */
-        }
-
-        /* New animations for list items */
-        li {
-            opacity: 0;
-            transform: translateY(10px);
-            animation: fadeInUp 0.5s forwards;
-        }
-
-        @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        /* Apply delay to each list item for staggered effect */
-        li:nth-child(1) { animation-delay: 0.6s; }
-        li:nth-child(2) { animation-delay: 0.8s; }
-        li:nth-child(3) { animation-delay: 1s; }
-        li:nth-child(4) { animation-delay: 1.2s; }
-        li:nth-child(5) { animation-delay: 1.4s; }
     </style>
 </head>
 <body>
-    <h1>Reasons Behind Endangerment</h1>
+    <h1>Reasons Behind the Endangerment of the Peregrine Falcon</h1>
+    
+    <div class="top-buttons">
+        <a href="conservation.html">Conservation Efforts</a>
+        <a href="threats.html">Current Threats</a>
+    </div>
+
     <div class="content">
-        <div class="animation-bar"></div>
-        <p>The following are some common reasons why species become endangered:</p>
+        <p>The peregrine falcon, known for its remarkable speed and sharp vision, has faced numerous challenges threatening its survival. Over the last century, human activity and environmental changes have placed this majestic bird in significant danger. Once at the brink of extinction, the peregrine falcon’s story serves as a reminder of nature’s delicate balance.</p>
+
+        <p><strong>Primary factors contributing to the endangerment of the peregrine falcon include:</strong></p>
+
         <ul>
-            <li>Habitat loss due to urbanization and deforestation.</li>
-            <li>Pollution affecting ecosystems and food sources.</li>
-            <li>Climate change altering natural habitats.</li>
-            <li>Overhunting and poaching of wildlife.</li>
-            <li>Invasive species disrupting local ecosystems.</li>
+            <li><strong>Pesticide Poisoning (e.g., DDT):</strong> The widespread use of the pesticide DDT in the mid-20th century had a catastrophic impact on peregrine falcons. DDT caused eggshell thinning, making it nearly impossible for embryos to survive until hatching. 
+                <span class="fact">Fact: By the 1970s, the peregrine falcon population in North America had declined by almost 90% due to DDT exposure.</span>
+            </li>
+
+            <li><strong>Habitat Loss:</strong> As cities expand and landscapes transform, the natural nesting sites of peregrine falcons are diminishing. These birds prefer nesting on cliffs and tall structures, but urban development disrupts their traditional habitats.
+                <span class="fact">Fact: While some peregrine falcons have adapted to urban settings, they often struggle due to lack of prey and nesting disturbances.</span>
+            </li>
+
+            <li><strong>Climate Change:</strong> Climate change has altered many ecosystems, affecting prey availability, breeding cycles, and migratory patterns of peregrine falcons. Rising temperatures and unpredictable weather patterns complicate their survival, especially in regions where seasonal changes are vital to their breeding and hunting routines.
+                <span class="fact">Fact: Studies indicate that many peregrine falcon populations in North America are moving northward, likely in response to climate changes.</span>
+            </li>
+
+            <li><strong>Pollution:</strong> Beyond pesticides, other forms of pollution—from chemical runoff to air pollutants—indirectly harm peregrine falcons by contaminating their food sources. Pollutants can accumulate in prey, impacting the health of falcons at the top of the food chain.
+                <span class="fact">Fact: Persistent organic pollutants (POPs) have been detected in falcon tissues, which can weaken immune systems and reduce reproductive success.</span>
+            </li>
+
+            <li><strong>Poaching and Illegal Trade:</strong> Although protected in many countries, peregrine falcons are sometimes targeted by poachers. They are sought after for their value in falconry and face risks in illegal wildlife trade markets, especially in areas with weak enforcement of wildlife protection laws.</li>
+
+            <li><strong>Invasive Species:</strong> Introduced species, such as other predatory birds, can threaten the food supply and nesting areas of peregrine falcons. These non-native species compete for resources and sometimes even prey on peregrine falcons themselves, disrupting local ecosystems.</li>
         </ul>
-        <img src="YOUR_IMAGE_URL_HERE.jpg" alt="Endangered Species" />
+
+        <p>Despite these challenges, dedicated conservation efforts have brought hope for the peregrine falcon. Programs focused on breeding, legislation banning harmful pesticides, and habitat protection have contributed to a gradual recovery of this species in several regions. However, continuous efforts are essential to ensure that future generations witness these magnificent birds in the wild.</p>
+
+        <div class="images-container">
+            <img src="Wild.jpg" alt="Peregrine Falcon in the Wild">
+            <img src="Eggs.jpg" alt="Peregrine Falcon Eggshells">
+            <img src="Nest.jpg" alt="Urban Nesting Site for Peregrine Falcons">
+        </div>
+
         <div class="button-container">
             <button onclick="window.location.href='index.html';">Back to Main Page</button>
-            <button onclick="window.location.href='page3';">Learn More About Conservation</button>
+            <button onclick="window.location.href='page3.html';">Learn More</button>
         </div>
     </div>
 </body>
