--- a/page2.html
+++ b/page2.html
@@ -23,7 +23,7 @@
         }
 
         .content {
-            max-width: 900px; /* Wider content container */
+            max-width: 900px;
             margin: 20px auto;
             padding: 40px;
             background-color: rgb(95, 83, 70);
@@ -51,28 +51,7 @@
             color: rgb(215, 215, 215);
         }
 
-        .top-buttons {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .top-buttons a {
-            padding: 12px 24px;
-            font-size: 16px;
-            color: white;
-            background-color: #007BFF;
-            border-radius: 5px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: background-color 0.3s;
-            margin: 0 10px;
-            display: inline-block;
-        }
-
-        .top-buttons a:hover {
-            background-color: #0056b3;
-        }
-
+        /* Image container styling */
         .images-container {
             display: flex;
             justify-content: space-around;
@@ -93,9 +72,10 @@
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
         }
 
+        /* Bottom button container styling */
         .button-container {
             text-align: center;
-            margin-top: 40px;
+            margin-top: 5px;
         }
 
         button {
@@ -118,11 +98,6 @@
 </head>
 <body>
     <h1>Reasons Behind the Endangerment of the Peregrine Falcon</h1>
-    
-    <div class="top-buttons">
-        <a href="conservation.html">Conservation Efforts</a>
-        <a href="threats.html">Current Threats</a>
-    </div>
 
     <div class="content">
         <p>The peregrine falcon, known for its remarkable speed and sharp vision, has faced numerous challenges threatening its survival. Over the last century, human activity and environmental changes have placed this majestic bird in significant danger. Once at the brink of extinction, the peregrine falcon’s story serves as a reminder of nature’s delicate balance.</p>
@@ -161,7 +136,7 @@
 
         <div class="button-container">
             <button onclick="window.location.href='index.html';">Back to Main Page</button>
-            <button onclick="window.location.href='page3.html';">Learn More</button>
+            <button onclick="window.location.href='page3.html';">Conservation Techniques</button>
         </div>
     </div>
 </body>
