--- a/page3.html
+++ b/page3.html
@@ -98,8 +98,8 @@
 <body>
     <!-- Top buttons -->
     <div class="top-buttons">
-        <a href="index.html">Home</a>
-        <a href="page2.html">Next Page</a>
+        <a href="index.html">Back to Main Page</a>
+        <a href="page2.html">Dangers to falcon</a>
     </div>
 
     <h1>Peregrine Falcon Conservation Efforts</h1>
