--- a/page2.html
+++ b/page2.html
@@ -94,9 +94,21 @@
         button:hover {
             background-color: #0056b3;
         }
+        
     </style>
 </head>
 <body>
+    <div id="google_translate_element"></div>
+
+    <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script>
+
+    <!-- Updated script source to include https -->
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
     <h1>Reasons Behind the Endangerment of the Peregrine Falcon</h1>
 
     <div class="content">
