--- a/page2.html
+++ b/page2.html
@@ -147,7 +147,7 @@
         </div>
 
         <div class="button-container">
-            <button onclick="window.location.href='index.html';">Back to Main Page</button>
+            <button onclick="window.location.href='https://raghavvenkatiyer.github.io/Peregrine-/index.html';">Back to Main Page</button>
             <button onclick="window.location.href='page3.html';">Conservation Techniques</button>
         </div>
     </div>
