--- a/page3.html
+++ b/page3.html
@@ -98,7 +98,7 @@
 <body>
     <!-- Top buttons -->
     <div class="top-buttons">
-        <a href="https://raghavvenkatiyer.github.io/Peregrine-/">Back to Main Page</a>
+        <a href="page1.html">Back to Main Page</a>
         <a href="page2.html">Dangers to falcon</a>
     </div>
 
